--- a/second_project/src/App.css
+++ b/second_project/src/App.css
@@ -6,6 +6,7 @@
     padding: 10px;
     border-radius: 10px;
     border: 3px solid tomato;
+    text-align: center;
 }
 .plus-btn{
     padding: 0 15px;
